--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,44 @@
-<p>menu works!</p>
+<nav class="navbar navbar-expand-lg bg-light mb-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="">Pets App</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/">
+              <i class="fa-solid fa-house"></i> Inicio
+            </a>
+          </li>
+
+          <li class="nav-item" *ngIf="isLogged">
+            <a class="nav-link" routerLink="/lista">
+              <i class="fa-solid fa-list"></i> Lista
+            </a>
+          </li>
+
+          <!-- Solo mostramos si es administrador -->
+          <li class="nav-item" *ngIf="isAdmin">
+            <a class="nav-link" routerLink="/nuevo">
+              <i class="fa-solid fa-square-plus"></i> Nuevo
+            </a>
+          </li>
+
+
+        </ul>
+
+        <!-- Para cerrar sesion e iniciar sesion -->
+        <form class="form-inline my-2 my-lg-0">
+          <button class="btn btn-outline-success" *ngIf="!isLogged" routerLink="/login" type="submit">
+            <i class="fa-solid fa-arrow-right-to-bracket"></i> Iniciar Sesión</button>
+
+          <button class="btn btn-outline-danger" *ngIf="isLogged" (click)="onLogOut()" type="reset">
+            <i class="fa-solid fa-arrow-right-from-bracket"></i> Cerrar Sesión
+          </button>
+        </form>
+      </div>
+    </div>
+  </nav>
