--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -11,9 +11,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/registro">Crear Cuenta</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/sendemail">Olvidé mi contraseña</a>
-                </li>
+                </li> -->
             </ul>
         </div>
 
@@ -23,7 +23,7 @@
             <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
                 <!-- Para el nombre de usuario -->
                 <div class="form-group">
-                    <label for="nombreUsuario">Nombre de Usuario Email</label>
+                    <label for="nombreUsuario">Nombre de Usuario o Email</label>
                     <input type="text" name="nombreUsuario" id="nombreUsuario" class="form-control"
                         [(ngModel)]="nombreUsuario" required>
                 </div>
