--- a/src/app/auth/register.component.html
+++ b/src/app/auth/register.component.html
@@ -1,1 +1,100 @@
-<p>register works!</p>
+<app-menu></app-menu>
+
+<div class="conatiner d-flex justify-content-center">
+
+    <div class="card">
+        <!-- Tabs -->
+        <div class="card-header">
+
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/login">Iniciar Sesion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" routerLink="/registro">Crear Cuenta</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" routerLink="/sendemail">Olvidé mi contraseña</a>
+                </li> -->
+            </ul>
+
+        </div>
+        <!-- Formulario -->
+        <div class="card-body">
+
+            <form #f="ngForm" (ngSubmit)="onRegister()" novalidate>
+
+                <!-- Para el ape paterno: lastName -->
+                <div class="form-group">
+                    <label for="lastName">Apellido Paterno</label>
+                    <input type="text" name="lastName" id="lastName" class="form-control" [(ngModel)]="lastName" required>
+                </div>
+
+                <!-- Para el ape materno: surName -->
+                <div class="form-group">
+                    <label for="surName">Apellido Materno</label>
+                    <input type="text" name="surName" id="surName" class="form-control" [(ngModel)]="surName" required>
+                </div>
+
+                <!-- Para el nombre: firstName -->
+                <div class="form-group">
+                    <label for="firstName">Nombres</label>
+                    <input type="text" name="firstName" id="firstName" class="form-control" [(ngModel)]="firstName" required>
+                </div>
+
+                <!-- Para el email -->
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="text" name="email" id="email" class="form-control" [(ngModel)]="email" required>
+                </div>
+
+                <!-- Para el dni -->
+                <div class="form-group">
+                    <label for="dni">Dni</label>
+                    <input type="text" name="dni" id="dni" class="form-control" [(ngModel)]="dni" required>
+                </div>
+
+                <!-- Para el nombre de usuario: username -->
+                <div class="form-group">
+                    <label for="username">Nombre de Usuario</label>
+                    <input type="text" name="username" id="username" class="form-control"
+                        [(ngModel)]="username" required>
+                </div>
+
+                <!-- Para la contrasena: password -->
+                <div class="form-group">
+                    <label for="nombreUsuario">Constraseña</label>
+                    <input type="password" name="password" id="password" class="form-control" [(ngModel)]="password"
+                        required>
+                </div>
+
+
+                <!-- Para el telefono: phone -->
+                <div class="form-group">
+                    <label for="phone">Telefono</label>
+                    <input type="text" name="phone" id="phone" class="form-control" [(ngModel)]="phone" required>
+                </div>
+
+
+                <!-- Para la direccion: address -->
+                <div class="form-group">
+                    <label for="address">Dirección</label>
+                    <input type="text" name="address" id="address" class="form-control" [(ngModel)]="address" required>
+                </div>
+
+
+                <!-- Para los botones -->
+                <div class="form-group">
+                    <button class="btn btn-outline-success btn-block" [disabled]="!f.valid">
+                        <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                        Crear cuenta
+                    </button>
+                </div>
+            </form>
+
+            <!-- Para el error -->
+            <!-- Solo uso toastr -->
+        </div>
+    </div>
+
+</div>
