--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,5 +1,5 @@
 <app-menu></app-menu>
-
+<!--
 <div class="container">
 
     <div class="jumbotron">
@@ -13,3 +13,22 @@
       </div>
 
 </div>
+-->
+<section class="home-index">
+  <div class="in-flex">
+    <p>¿Adoptas?</p>
+    <p>
+      Adoptar un perro o un gato es un acto humano maravilloso. No solo ganarás
+      un amig@ para siempre, además estarás salvando una vida.
+    </p>
+    <p>
+      ¡Encuentra una mascota, deja que surja el flechazo y dale una segunda
+      oportunidad en la vida! Esta vez estará contigo para siempre.
+    </p>
+    <button type="button" class="btn btn-danger">únete</button>
+    <p>¿Ya tienes una cuenta? Inicia Sesión</p>
+  </div>
+  <div class="in-flex">
+    <img src="https://estag.fimagenes.com/img/3/2/x/Z/2xZ_900.jpg" alt="error" class="img"/>
+  </div>
+</section>
