--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,1 +1,4 @@
-<button type="button" class="btn btn-primary" (click)="onSubmit()">Primary</button>
+<button type="button" class="btn btn-primary" (click)="onSubmit()">Registrar Perro</button>
+<button type="button" class="btn btn-primary" (click)="verMascotas()">Ver Mascotas</button>
+<button type="button" class="btn btn-primary" (click)="verPerdidos()">Mascotas Perdidas</button>
+<button type="button" class="btn btn-primary" (click)="perdido()">Registrar Perdida</button>
