--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
 
       <!-- Para cerrar sesion e iniciar sesion -->
       <form class="form-inline my-2 my-lg-0">
-        <button class="btn btn-secondary" *ngIf="!isLogged" routerLink="/login" type="submit">
+        <button class="btn btn-primary" *ngIf="!isLogged" routerLink="/login" type="submit">
           <i class="fa-solid fa-arrow-right-to-bracket"></i> Iniciar Sesión
         </button>
 
