--- a/src/app/pages/home/read-pet/read-pet.component.css
+++ b/src/app/pages/home/read-pet/read-pet.component.css
@@ -1,17 +1,20 @@
-.grid {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  margin: 50px;
+.form-group-register {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+  padding: 20px;
 }
 
-.content > mat-card {
-  width: fit-content;
+.form-image{
+  width: 50%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
 }
 
-.text-grid {
-  text-align: center;
-  font-size: xx-large;
-  margin-bottom: 20px;
+.preview{
+  width: 500px;
+  height: 500px;
+  margin: 10px auto;
 }
