--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -25,7 +25,7 @@
         ¡Encuentra una mascota, deja que surja el flechazo y dale una segunda
         oportunidad en la vida! Esta vez estará contigo para siempre.
       </p>
-      <button type="button" class="button-index">Únete</button>
+      <button type="button" routerLink="/login" class="button-index">Únete</button>
       <p>
         ¿Ya tienes una cuenta?
         Inicia Sesión
