--- a/src/app/pages/home/home/home.component.css
+++ b/src/app/pages/home/home/home.component.css
@@ -128,5 +128,9 @@ border: unset;
 background-color: #575151;
 border-radius: 5px;
 }
+ul {
+  list-style-type: none;
+  list-style-position: inside;
+}
 
 
