errores por imagenes en b64 pendiente

--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="row contenedores">
     <div class="col-sm-4 align-items-center text-container-home">
-      <img src="{{ ImgenPerfil }}" class="imagenPerfil" alt="..." />
+      <img src="{{ ImgenPerfil }}" alt="error en imagen" srcset="{{ImgenPerfilAlt}}" this.src='URL_de_imagen_alternativa.jpg'class="imagenPerfil" alt="..." />
       <p class="title">
         {{ Name }}
       </p>
