--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -58,3 +58,10 @@
   justify-content: center;
   text-align: center;
 }
+.form-image-register{
+  width: 20px;
+  height: 20px;
+}
+.foto{
+  margin: 10px;
+}
