--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -30,6 +30,13 @@
               required
             />
           </div>
+          <!--
+            <div class="form-group foto">
+            <label for="surName">Foto de perfil</label>
+            <input class="form-control" type="file" accept="image/*"  (change)="onFileSelected($event)" #fileInput/>
+          </div>
+          -->
+
 
           <!-- Para el ape materno: surName -->
           <div class="form-group">
@@ -136,6 +143,11 @@
               required
             />
           </div>
+          <div class="form-group foto">
+            <label for="surName">Foto de perfil</label>
+            <!--<button type="button" mat-raised-button (click)="fileInput.click()">Subir Foto</button>-->
+            <input class="form-control" type="file" accept="image/*"  (change)="onFileSelected($event)" #fileInput/>
+          </div>
           <!-- Para los botones -->
           <div class="form-group">
             <button class="button-register" [disabled]="!f.valid">
@@ -143,8 +155,8 @@
               Crear cuenta
             </button>
           </div>
-        </form>
 
+        </form>
         <!-- Para el error -->
         <!-- Solo uso toastr -->
       </div>
