--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,16 +1,7 @@
-<!--<button type="button" class="btn btn-primary" (click)="onSubmit()">Registrar Perro</button>
-<button type="button" class="btn btn-primary" (click)="verMascotas()">Ver Mascotas</button>
-<button type="button" class="btn btn-primary" (click)="verPerdidos()">Mascotas Perdidas</button>
-<button type="button" class="btn btn-primary" (click)="perdido()">Registrar Perdida</button>
-
--->
 <div class="container">
   <div class="row contenedores">
     <div class="col-sm-4 align-items-center text-container-home">
-      <!--<img src="{{ ImgenPerfil }}" alt="error en imagen" srcset="{{ImgenPerfilAlt}}" this.src='URL_de_imagen_alternativa.jpg'class="imagenPerfil" alt="..." />
-      -->
-      <img class="imagenPerfil" mat-card-image [src]="'data:image/jpeg;base64,'+ImgenPerfil | safePipe: 'resourceUrl'"
-             alt="Photo of a Shiba Inu">
+      <img class="imagenPerfil" [src]="imagenPerfil | safePipe: 'resourceUrl'" alt="Photo of a Shiba Inu">
       <p class="title">  {{ Name }} </p>
       <p>  {{ Username }} </p>
       <div class="buttons-perfil">
@@ -19,9 +10,10 @@
             <p>Ver</p>
             <p>pérdidas</p>
           </span>
-          <svg width="34" height="34" viewBox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg" >
-            <circle cx="37" cy="37" r="35.5" stroke="black" stroke-width="3" ></circle>
-            <path  d="M25 35.5C24.1716 35.5 23.5 36.1716 23.5 37C23.5 37.8284 24.1716 38.5 25 38.5V35.5ZM49.0607 38.0607C49.6464 37.4749 49.6464 36.5251 49.0607 35.9393L39.5147 26.3934C38.9289 25.8076 37.9792 25.8076 37.3934 26.3934C36.8076 26.9792 36.8076 27.9289 37.3934 28.5147L45.8787 37L37.3934 45.4853C36.8076 46.0711 36.8076 47.0208 37.3934 47.6066C37.9792 48.1924 38.9289 48.1924 39.5147 47.6066L49.0607 38.0607ZM25 38.5L48 38.5V35.5L25 35.5V38.5Z"
+          <svg width="34" height="34" viewBox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="37" cy="37" r="35.5" stroke="black" stroke-width="3"></circle>
+            <path
+              d="M25 35.5C24.1716 35.5 23.5 36.1716 23.5 37C23.5 37.8284 24.1716 38.5 25 38.5V35.5ZM49.0607 38.0607C49.6464 37.4749 49.6464 36.5251 49.0607 35.9393L39.5147 26.3934C38.9289 25.8076 37.9792 25.8076 37.3934 26.3934C36.8076 26.9792 36.8076 27.9289 37.3934 28.5147L45.8787 37L37.3934 45.4853C36.8076 46.0711 36.8076 47.0208 37.3934 47.6066C37.9792 48.1924 38.9289 48.1924 39.5147 47.6066L49.0607 38.0607ZM25 38.5L48 38.5V35.5L25 35.5V38.5Z"
               fill="black"
             ></path>
           </svg>
@@ -33,16 +25,16 @@
 
       <p>Aquí podrás...</p>
       <div class="contenedor-opciones">
-        <hr />
+        <hr/>
         <p class="title">Registrar Mascota</p>
         <p>Registra tus macotas para poder solicitar ayuda en caso de pérdida</p>
         <button type="button" (click)="onSubmit()" class="button-index button-opciones">Ir</button>
       </div>
       <div class="contenedor-opciones">
-        <hr />
+        <hr/>
         <p class="title">Ver tus mascotas</p>
         <p>Realizar sequimiento a tus mascotas</p>
-        <button  type="button" (click)="verMascotas()" class="button-index button-opciones">Ir</button>
+        <button type="button" (click)="verMascotas()" class="button-index button-opciones">Ir</button>
       </div>
     </div>
   </div>
